--- a/nsw/index.html
+++ b/nsw/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="./vendor/css/cubeportfolio.min.css">
     <link href="css/line-awesome.min.css" rel="stylesheet">
     <!-- Style Sheet -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/style.css?v=3" rel="stylesheet">
+    <link href="css/custom.css?v=3" rel="stylesheet">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="90">
 
@@ -54,7 +54,7 @@
             <div class="round-nav ">
                 <a href="#home" title="Logo" class="logo ">
                     <!--Logo Default-->
-                    <img src="images/juliani_logo.png" alt="logo" class=" nav-logo">
+                    <img src="/images/logos/nsw_logo_rec.png" alt="logo" class=" nav-logo">
                 </a>
 
                 <!--Nav Links-->
@@ -142,7 +142,10 @@
                         Nairobi Startup Week
                     </h2>
                     <h5 class="banner-des">
-                        NSW provides an easy, fun and informative environment for start-ups and the ecosystem to curate an experience for their current and potential customers.
+                        <strong>Dates:</strong> Wednesday, July 6 - Sunday, July 10, 2022 <br/>
+                        <strong>Venue:</strong> Waterfront, Karen, Nairobi &mdash; <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                        </svg> <a style="text-decoration: underline; color:cornflowerblue" target="_blank" href="https://g.page/TWFKaren?share">see map</a>
                     </h5>
                     <p class="banner-des" style="color:white;"><strong>Opportunities available for startups:</strong></p>
                     <ul class="banner-des" style="color: white;">
@@ -228,15 +231,16 @@
                                     <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2  text-center wow slideInUp" data-wow-duration="2s">
                                         <p class="sub-heading text-center text-blue">#NSW2022</p>
                                         <h1 class="heading text-orang">Partners</h1>
-                                        <p class="para_text m-auto">Sendy / KEPSA / ASSEK / Africastalking / Startinev / Qhala / Adanian Lab / Wanderlust / NTF Club / Promote Kenya / Motisure / KenyanWall Street / Doctors Live / Talk Africa Podcast / Beyonde Labs / Sauti Gang </p>
+                                        <p class="para_text m-auto">Sendy / KEPSA / ASSEK / Africastalking / Startinev / Qhala / Adanian Lab / Wanderlust / Kenya NFT Club / Promote Kenya / Motisure / Kenyan Wallstreet / Doctors Live / Talk Africa Podcast / Beyonde Labs / Sauti Gang </p>
                                     </div>
                                     <div class="row partners-logos">
                                         <div class="column" style="text-align: center;">
                                             <img src="./images/logos/adanianlabs.png">
                                             <img src="./images/logos/beyonde_labs_inv.png">
-                                            <img src="./images/logos/doctorslive.jpeg">
+                                            <img src="./images/logos/doctorslive_inv2.png">
                                             <img src="./images/logos/africastalking.png">
                                             <img src="./images/logos/kenyan_wallstreet.jpeg">
+                                            <img src="./images/logos/kenya_nft_club.jpeg">
                                             <img src="./images/logos/kepsa.png">
                                             <img src="./images/logos/kidato.png">
                                             <img src="./images/logos/motisure.jpeg">
@@ -245,8 +249,8 @@
                                             <img src="./images/logos/qhala.png">
                                             <img src="./images/logos/sautigang.png" />
                                             <img src="./images/logos/sendy_inv.png">
+                                            <img src="./images/logos/startinev_blk.png" />
                                             <img src="./images/logos/sustainable.png">
-                                            <img src="./images/logos/startinev.jpeg" />
                                             <img src="./images/logos/wanderlust-diaries-logo.png">
                                             <img src="./images/juliani_logo.png">
                                         </div>
@@ -282,7 +286,7 @@
                                     <li class="para_text m-auto"><strong>Showcase Hall</strong> – NSW will provide the space for the start-ups and partners to schedule, host and curate their own content that is; workshops, presentations or anything of interest to them. This will be open for walk in and invited guests.</li>
                                     <li class="para_text m-auto"><strong>Exhibition Space</strong> – The start-ups/partners to set up at the exhibition open areas to showcase their products/service.</li>
                                     <li class="para_text m-auto"><strong>The village</strong> – This is a fun area designated for partners to host their customers, invited guests, team members etc. for a themed experience. NSW will provide the space, decor, furniture, sound and equipment.</li>
-                                    <li class="para_text m-auto"><strong>Fireside chats</strong> – This will be conversations with selected start-ups/partners around the theme areas. The chats will be pre-recorded and streamed before the JX Concert  kick off?”</li>
+                                    <li class="para_text m-auto"><strong>Fireside chats</strong> – This will be conversations with selected start-ups/partners around the theme areas. The chats will be pre-recorded and streamed before the JX Concert  kick off.</li>
                                     <li class="para_text m-auto"><strong>Main stage</strong> – The concert area for the four-day Jx hybrid concert. In the evening after the NSW Activities during the day.</li>
                                     <li class="para_text m-auto"><strong>Family show (Arena area)</strong> – The concert area for the last day of the NSW, which will be open to the wider public.</li>
                                 </ul>
