--- a/nsw/prog.html
+++ b/nsw/prog.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="./vendor/css/cubeportfolio.min.css">
     <link href="css/line-awesome.min.css" rel="stylesheet">
     <!-- Style Sheet -->
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/style.css?v=3" rel="stylesheet">
+    <link href="css/custom.css?v=3" rel="stylesheet">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="90">
 
@@ -54,7 +54,7 @@
             <div class="round-nav ">
                 <a href="/#home" title="Logo" class="logo ">
                     <!--Logo Default-->
-                    <img src="images/juliani_logo.png" alt="logo" class=" nav-logo">
+                    <img src="/images/logos/nsw_logo_rec.png" alt="logo" class=" nav-logo">
                 </a>
 
                 <!--Nav Links-->
@@ -72,9 +72,7 @@
         <div class="social-icons">
             <ul>
                 <li><a class="email-hover" href="mailto:info@nsw.ke" target="_blank"><i class="fas fa-at"></i></a></li>
-                <li><a class="instagram-hover" href="https://instagram.com/nsw_ke" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
-  <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
-</svg></a></li>
+                <li><a class="instagram-hover" href="https://instagram.com/nsw_ke" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 <li><a class="twitter-hover" href="https://twitter.com/nsw_ke" target="_blank"><i class="fab fa-twitter"></i></a></li>
                 <!-- <li><a class="instagram-hover" href="javascript:void(0);" target="_blank"><i class="fab fab fa-linkedin-in"></i></a></li> -->
             </ul>
@@ -129,9 +127,17 @@
     <h2 class="txt text-letter-spacing-xs my-0 text-primary font-weight-bold">
       Program and Activities
     </h2>
-    <p class="text-sm text-dark mt-0 mb-5">We are finalizing on the program, but here is an early preview <br/>
-      <a style="border: solid 2px #ff7c00; font-weight: bold;" target="_blank" href="https://bit.ly/nsw-rsvp" class="btn btn-large">Register for Free</a>
-    </p>
+    <p class="text-sm text-dark mt-0 mb-5"><em>We are finalizing on the program, but here is an early preview</em></p>
+    <div style="border-left: solid 5px #219ebc; padding-left: 10px;">
+      <p>
+        <strong>Dates:</strong> Wednesday, July 6 - Sunday, July 10 <br/>
+        <strong>Venue:</strong> Waterfront, Karen, Nairobi &mdash; <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ff7c00" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+          <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+        </svg> <a style="text-decoration: underline; color:cornflowerblue" target="_blank" href="https://g.page/TWFKaren?share">see map</a>
+      </p>
+    </div>
+    <p><a style="border: solid 2px #ff7c00; font-weight: bold; margin-top: 10px;" target="_blank" href="https://bit.ly/nsw-rsvp" class="btn btn-large">Register for Free</a></p>
+      
     <!-- Days -->
     <div class="row">
       <div class="col-lg-4 mb-3" id="">
@@ -155,7 +161,7 @@
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">3:00 - 4:00 PM</span> - Shengprenuer</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">4:00 - 5:00 PM</span> - Mental health by Doctor Live</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">4:00 - 5:00 PM</span> - Mental health by Doctors Live</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 6:00 PM</span> - Techtalk Afrika Podcast </p>
@@ -271,7 +277,12 @@
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-village"> Let your hair down, connect with others at our village launge.</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 7:00 PM</span> - Boombap: East African & Kenyan Hiphop DJ set</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 10:00 PM</span> - #SautiJams <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ef233c" class="bi bi-music-note-beamed" viewBox="0 0 16 16">
+              <path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2zm9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2z"/>
+              <path fill-rule="evenodd" d="M14 11V2h1v9h-1zM6 3v10H5V3h1z"/>
+              <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4V2.905z"/>
+            </svg> - Open Jam Sessions by Sauti Gang <br/>
+            <span class="tiny">Open to any musician/rapper and instrumentalist to join and jam. Come with your instrument if possible. <a target="_blank" href="https://sautigang.com/sautijams">Details here</a>.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-mainstage">
             <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-mic-fill" viewBox="0 0 16 16">
@@ -323,7 +334,12 @@
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-village"> Let your hair down, connect with others at our village launge.</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 7:00 PM</span> - TBD</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 10:00 PM</span> - #SautiJams <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#ef233c" class="bi bi-music-note-beamed" viewBox="0 0 16 16">
+              <path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2zm9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2z"/>
+              <path fill-rule="evenodd" d="M14 11V2h1v9h-1zM6 3v10H5V3h1z"/>
+              <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4V2.905z"/>
+            </svg> - Open Jam Sessions by Sauti Gang <br/>
+            <span class="tiny">Open to any musician/rapper and instrumentalist to join and jam. Come with your instrument if possible. <a target="_blank" href="https://sautigang.com/sautijams">Details here</a>.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-mainstage">
             <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-mic-fill" viewBox="0 0 16 16">
@@ -386,15 +402,16 @@
           <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2  text-center wow slideInUp" data-wow-duration="2s">
               <p class="sub-heading text-center text-blue">#NSW2022</p>
               <h1 class="heading text-orang">Partners</h1>
-              <p class="para_text m-auto">Sendy / KEPSA / ASSEK / Africastalking / Startinev / Qhala / Adanian Lab / Wanderlust / NTF Club / Promote Kenya / Motisure / Kenyan Wall Street / Doctors Live / Talk Africa Podcast / Beyonde Labs / Sauti Gang </p>
+              <p class="para_text m-auto">Sendy / KEPSA / ASSEK / Africastalking / Startinev / Qhala / Adanian Lab / Wanderlust / Kenya NFT Club / Promote Kenya / Motisure / Kenyan Wallstreet / Doctors Live / Talk Africa Podcast / Beyonde Labs / Sauti Gang </p>
           </div>
           <div class="row partners-logos">
               <div class="column" style="text-align: center;">
                 <img src="./images/logos/adanianlabs.png">
                 <img src="./images/logos/beyonde_labs_inv.png">
-                <img src="./images/logos/doctorslive.jpeg">
+                <img src="./images/logos/doctorslive_inv2.png">
                 <img src="./images/logos/africastalking.png">
                 <img src="./images/logos/kenyan_wallstreet.jpeg">
+                <img src="./images/logos/kenya_nft_club.jpeg">
                 <img src="./images/logos/kepsa.png">
                 <img src="./images/logos/kidato.png">
                 <img src="./images/logos/motisure.jpeg">
@@ -403,8 +420,8 @@
                 <img src="./images/logos/qhala.png">
                 <img src="./images/logos/sautigang.png" />
                 <img src="./images/logos/sendy_inv.png">
+                <img src="./images/logos/startinev_blk.png" />
                 <img src="./images/logos/sustainable.png">
-                <img src="./images/logos/startinev.jpeg" />
                 <img src="./images/logos/wanderlust-diaries-logo.png">
                 <img src="./images/juliani_logo.png">
               </div>
