--- a/nsw/index.html
+++ b/nsw/index.html
@@ -231,7 +231,7 @@
                                     <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2  text-center wow slideInUp" data-wow-duration="2s">
                                         <p class="sub-heading text-center text-blue">#NSW2022</p>
                                         <h1 class="heading text-orang">Partners</h1>
-                                        <p class="para_text m-auto">Sendy / KEPSA / ASSEK / Africastalking / Startinev / Qhala / Adanian Lab / Wanderlust / Kenya NFT Club / Promote Kenya / Motisure / Kenyan Wallstreet / Doctors Live / Talk Africa Podcast / Beyonde Labs / Sauti Gang </p>
+                                        <p class="para_text m-auto">Sendy / KEPSA / ASSEK / Africastalking / Startinev / Qhala / Adanian Lab / Wanderlust / Kenya NFT Club / Promote Kenya / Motisure / Kenyan Wallstreet / Doctors Live / Talk Africa Podcast / Beyonde Labs / Sauti Gang / The Waterfront </p>
                                     </div>
                                     <div class="row partners-logos">
                                         <div class="column" style="text-align: center;">
@@ -252,6 +252,7 @@
                                             <img src="./images/logos/startinev_blk.png" />
                                             <img src="./images/logos/sustainable.png">
                                             <img src="./images/logos/wanderlust-diaries-logo.png">
+                                            <img src="./images/logos/waterfront-logo.png">
                                             <img src="./images/juliani_logo.png">
                                         </div>
                                       </div>
