--- a/nsw/prog.html
+++ b/nsw/prog.html
@@ -148,23 +148,33 @@
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column schedule-title">
             <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
   <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
-</svg></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
+</svg></a> <strong>SHOWCASE SPOTLIGHT</strong><br/>
+<span class="tiny">We will be spotlighting the following projects/startups; besides the ongoing exhibitions for the day.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">2:00 - 3:00 PM</span> - Our Future, Our past.</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">2:00 - 3:00 PM</span> - Our Future, In The Past - 
+              <span class="tiny">a deeper look at the evolution of our culture and heritage.
+            This will be in partnership with the National Museums of Kenya.
+          </span></p>
           </li>
           <!-- <li class="list-timeline-item show p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-item-2">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-primary font-weight-bold op-8 infinite animated flash" data-animate="flash" data-animate-infinite="1" data-animate-duration="3.5" style="animation-duration: 3.5s;">Now</span> - Vitaly Friedmann</p>
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8 show" id="day-1-item-2"> Talk: Wireframing / <span class="text-primary">Room 19</span> </p>
           </li> -->
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">3:00 - 4:00 PM</span> - Shengprenuer</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">3:00 - 4:00 PM</span> - Shengprenuer - Juliani Jeshi <br/>
+            <span class="tiny">Pitch your startup idea the best way you know how. Win 150K investment.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">4:00 - 5:00 PM</span> - Mental health by Doctors Live</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">4:00 - 5:00 PM</span> - Mental Health - Doctors Live <br/>
+            <span class="tiny">A keynote about mental health in the startup space, by expert psychologist,
+              Claire Omolo</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 6:00 PM</span> - Techtalk Afrika Podcast </p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 6:00 PM</span> - Techtalk Afrika Podcast - by Jessy Tech blogger at Incubate Africa.
+            <span class="tiny">Our main aim is to simplify a Product for our audience for easier
+              adoption and sensitization, Educate the masses and Make Tech for
+              everyone in a relatable manner</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-village">
             <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-boombox-fill" viewBox="0 0 16 16">
@@ -200,7 +210,8 @@
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column schedule-title">
             <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
   <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
-</svg></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
+</svg></a> <strong>SHOWCASE SPOTLIGHT</strong><br/>
+<span class="tiny">We will be spotlighting the following projects/startups; besides the ongoing exhibitions for the day.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">2:00 - 3:00 PM</span> - TBD</p>
@@ -210,13 +221,15 @@
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8 show" id="day-1-item-2"> Talk: Wireframing / <span class="text-primary">Room 19</span> </p>
           </li> -->
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">3:00 - 4:00 PM</span> - Shengprenuer</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">3:00 - 4:00 PM</span> - Shengprenuer - Juliani Jeshi <br/>
+              <span class="tiny">Pitch your startup idea the best way you know how. Win 150K investment.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">4:00 - 5:00 PM</span> - Safety Net during Commute by Motisure</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 6:00 PM</span> - Techtalk Afrika Podcast </p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 6:00 PM</span> - NFTs Ni Nini? - NFT Club <br/>
+            <span class="tiny">Moderated By: Trevor Maingi (TJ) / Speakers: Kelvin Kiggs, Kaffithe Baddest, Metagrapher</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-village">
             <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-boombox-fill" viewBox="0 0 16 16">
@@ -236,7 +249,8 @@
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-mainstage">The Juliani Experiment Show (JX_)</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">07:00 - 08:00 PM</span> - Fireside Chat: Investments</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">07:00 - 08:00 PM</span> - 🔥 <strong>Fireside Chat:</strong> Circular Economy: <em>The Role of SMEs in the Growth and Resilience of Kenya’s Economy.</em><br/>
+            <span class="tiny">Moderator: Ebenezer A. Amadi, Program Manager, Sustainble Inclusive Business</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">08:00 - 10:00 PM</span> - Concert: Pulpit Kwa Street </p>
@@ -251,20 +265,25 @@
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column schedule-title">
             <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
   <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
-</svg></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
+</svg></a> <strong>SHOWCASE SPOTLIGHT</strong><br/>
+<span class="tiny">We will be spotlighting the following projects/startups; besides the ongoing exhibitions for the day.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">2:00 - 3:00 PM</span> - Short-term Accommodation</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">2:00 - 3:00 PM</span> - Short-term Accommodation - 
+            <span class="tiny">to facilitate a constructive dialogue between industry and national/regional authorities and other relevant stakeholders to possibly come up with a set of principles applicable to collaborative economy in the tourism accommodation sector.</span></p>
           </li>
           <!-- <li class="list-timeline-item show p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-item-2">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-primary font-weight-bold op-8 infinite animated flash" data-animate="flash" data-animate-infinite="1" data-animate-duration="3.5" style="animation-duration: 3.5s;">Now</span> - Vitaly Friedmann</p>
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8 show" id="day-1-item-2"> Talk: Wireframing / <span class="text-primary">Room 19</span> </p>
           </li> -->
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">3:00 - 4:00 PM</span> - Shengprenuer</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">3:00 - 4:00 PM</span> - Shengprenuer - Juliani Jeshi <br/>
+              <span class="tiny">Pitch your startup idea the best way you know how. Win 150K investment.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">4:00 - 5:00 PM</span> - NFT Club</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">4:00 - 5:00 PM</span> - NFT Project Highlight - NFT Club <br/>
+              <span class="tiny">Moderated By: Ronny Onkeo / Speakers: Africhibis (Adrian Jankowiak), Akina DADA (Dada Boipelo), PAL4People (Lynn Atieno</span>
+            </p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">5:00 - 6:00 PM</span> - Techtalk Afrika Podcast </p>
@@ -282,7 +301,7 @@
               <path fill-rule="evenodd" d="M14 11V2h1v9h-1zM6 3v10H5V3h1z"/>
               <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4V2.905z"/>
             </svg> - Open Jam Sessions by Sauti Gang <br/>
-            <span class="tiny">Open to any musician/rapper and instrumentalist to join and jam. Come with your instrument if possible. <a target="_blank" href="https://sautigang.com/sautijams">Details here</a>.</span></p>
+            <span class="tiny">Open to any musician/rapper and instrumentalist to join and jam. Come with your instrument if possible. <a target="_blank" href="https://sautigang.com/sautijams">👉 More details here</a>.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-mainstage">
             <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-mic-fill" viewBox="0 0 16 16">
@@ -308,7 +327,8 @@
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column schedule-title">
             <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
   <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z"/>
-</svg></a> <strong>SHOWCASE & EXHIBITIONS</strong></p>
+</svg></a> <strong>SHOWCASE SPOTLIGHT</strong><br/>
+<span class="tiny">We will be spotlighting the following projects/startups; besides the ongoing exhibitions for the day.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">2:00 - 3:00 PM</span> - TBD</p>
@@ -318,7 +338,8 @@
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8 show" id="day-1-item-2"> Talk: Wireframing / <span class="text-primary">Room 19</span> </p>
           </li> -->
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">3:00 - 4:00 PM</span> - Shengprenuer</p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">3:00 - 4:00 PM</span> - Shengprenuer - Juliani Jeshi <br/>
+              <span class="tiny">Pitch your startup idea the best way you know how. Win 150K investment.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">4:00 - 5:00 PM</span> - Sauti Gang: Mzkey App &mdash; a session with musicians and instrumentalists</p>
@@ -339,7 +360,7 @@
               <path fill-rule="evenodd" d="M14 11V2h1v9h-1zM6 3v10H5V3h1z"/>
               <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4V2.905z"/>
             </svg> - Open Jam Sessions by Sauti Gang <br/>
-            <span class="tiny">Open to any musician/rapper and instrumentalist to join and jam. Come with your instrument if possible. <a target="_blank" href="https://sautigang.com/sautijams">Details here</a>.</span></p>
+            <span class="tiny">Open to any musician/rapper and instrumentalist to join and jam. Come with your instrument if possible. <a target="_blank" href="https://sautigang.com/sautijams">👉 More details here</a>.</span></p>
           </li>
           <li class="list-timeline-item p-0 pb-3 pb-lg-4 d-flex flex-wrap flex-column" data-toggle="collapse" data-target="#day-1-mainstage">
             <p class="my-0 text-dark flex-fw text-sm txt"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#ff7c00" class="bi bi-mic-fill" viewBox="0 0 16 16">
@@ -349,7 +370,9 @@
             <p class="my-0 collapse flex-fw txt text-xs text-dark op-8" id="day-1-mainstage">The Juliani Experiment Show (JX_)</p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
-            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">07:00 - 08:00 PM</span> - Fireside Chat: Market </p>
+            <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">07:00 - 08:00 PM</span> - 🔥 <strong>Fireside Chat: </strong>Improving the Environment for SMEs to Thrive! <br/>
+              <span class="tiny">Moderator: Harrison Ngatia - Head of Projects, KEPSA.</span>
+            </p>
           </li>
           <li class="list-timeline-item p-0 pb-3 d-flex flex-wrap flex-column">
             <p class="my-0 text-dark flex-fw text-sm txt"><span class="text-inverse op-8">08:00 - 10:00 PM</span> - Concert: Masterpiece</p>
@@ -402,7 +425,7 @@
           <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2  text-center wow slideInUp" data-wow-duration="2s">
               <p class="sub-heading text-center text-blue">#NSW2022</p>
               <h1 class="heading text-orang">Partners</h1>
-              <p class="para_text m-auto">Sendy / KEPSA / ASSEK / Africastalking / Startinev / Qhala / Adanian Lab / Wanderlust / Kenya NFT Club / Promote Kenya / Motisure / Kenyan Wallstreet / Doctors Live / Talk Africa Podcast / Beyonde Labs / Sauti Gang </p>
+              <p class="para_text m-auto">Sendy / KEPSA / ASSEK / Africastalking / Startinev / Qhala / Adanian Lab / Wanderlust / Kenya NFT Club / Promote Kenya / Motisure / Kenyan Wallstreet / Doctors Live / Talk Africa Podcast / Beyonde Labs / Sauti Gang / The Waterfront </p>
           </div>
           <div class="row partners-logos">
               <div class="column" style="text-align: center;">
@@ -423,6 +446,7 @@
                 <img src="./images/logos/startinev_blk.png" />
                 <img src="./images/logos/sustainable.png">
                 <img src="./images/logos/wanderlust-diaries-logo.png">
+                <img src="./images/logos/waterfront-logo.png">
                 <img src="./images/juliani_logo.png">
               </div>
             </div>
